# deal-desk-agent

./: .env.example  .gitignore  README.md
adaptive-approval-agent/: .env.example  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test-payload.json
adaptive-approval-agent/DealDeskSolution/: DealDeskSolution_1.2.3.deploy.config.json
adaptive-approval-agent/DealDeskSolution/DealDeskApproval/: DealDeskApproval.bpmn  bindings_v2.json  entry-points.json  operate.json  package-descriptor.json  project.uiproj
adaptive-approval-agent/DealDeskSolution/DealDeskApproval_WaitDecision/: WORKFLOW_DIAGRAM.md  WaitDecision.xaml  WaitDecision.xaml.json  project.json  project.uiproj
adaptive-approval-agent/DealDeskSolution/DealDeskHitlApi/: create_approval.json  entry-points.json  get_approval.json  project.json  respond_approval.json  spike_probe.json
adaptive-approval-agent/agent/: api.py  bindings.json  entry-points.json  langgraph.json  main.py  paths.py  plan.mermaid  plan_in.json  process_response.mermaid  project.uiproj  pyproject.toml  render.mermaid  requirements.txt  settings.py  uipath.json
adaptive-approval-agent/agent/__uipath/: uipath.json
adaptive-approval-agent/agent/configs/: hibob_org.json
adaptive-approval-agent/agent/graphs/: plan_graph.py  render_graph.py  response_graph.py
adaptive-approval-agent/artifacts/: smoke_card.json
adaptive-approval-agent/docs/: SOLUTION_BLUEPRINT.md
adaptive-approval-agent/scripts/: export_schemas.py  integration_config_checklist.md  pack-DealDeskSolution-local-uis.ps1  patch_waitdecision_enrich.py  run_four_waitdecision_tests.py  seed-dealdesk-solution-package-files.ps1  upload_to_orchestrator.py  validate_flows.py
submission/: README.md  demo-script.md  (+6 more)
(+135 files in other folders)
