[project]
name = "adaptive-approval-agent"
version = "0.1.0"
description = "Agentic replacement for static approval rule trees"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Daniela Rosenstein", email = "daniela.rosenstein@cato.network" }]
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.7,<3",
    "email-validator>=2.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "structlog>=24.1",
    "jsonschema>=4.22",
    "pyjwt[crypto]>=2.8",
    "tenacity>=8.2",
    "langgraph>=0.2",
    "langchain-aws>=0.2",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[tool.uv.workspace]
members = ["agent", "setup-agent", "aggregate-analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
