[project]
name = "adaptive-approval-agent-core"
version = "0.1.20"
description = "Main Adaptive Approval Coded Agent"
authors = [{ name = "Daniela Rosenstein" }]
readme = "../README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.7",
    "email-validator>=2.1",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-aws>=0.2",
    "boto3>=1.34",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "structlog>=24.1",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
    "pyjwt[crypto]>=2.8",
    "uipath>=2.8,<3",
    "uipath-langchain>=0.11.12",
]
